# ffi-jose

./: .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  jest.config.neon.json  jest.config.typescript.js  package.json  tsconfig.json  tsup.config.ts  vitest.config.mts
.circleci/: config.yml
__tests__/: compactSign.jose.spec.ts  compactVerify.jose.spec.ts  decrypt.jose.spec.ts  decryptJson.jose.spec.ts  encrypt.jose.spec.ts  flattenedSign.jose.spec.ts  generalEncryptJson.jose.spec.ts  generalSign.jose.spec.ts  generateJwk.jose.spec.ts  generateKeyPair.jose.spec.ts  jsonVerify.jose.spec.ts  jwks.json
docs/: index.html
docs/api/: index.html  modules.html
docs/api/assets/: highlight.css  icons.css  (+2 more)
native/: build.rs
native/src/: jose.rs  lib.rs  wrappers.rs
scripts/: add_stable_install_script.js  add_unstable_install_script.js  build.sh  install-dependencies.sh  java_test.sh  linux_docker_build.sh  neon_test.sh  publish_binary.sh  publish_ts.sh  publish_unstable_ts.sh
src/: KeyObject.ts  index.ts  jose.ts
src/types/: JWK.ts  JoseEncryptResponse.ts  JoseGenerateJwkRequest.ts  JoseGenerateKeyPairResponse.ts  JoseModule.ts  KeyEncryption.ts  NamedCurve.ts  SigningAlgorithm.ts  index.ts
ssi-ffi-jose/ssi/ffi_jose/native/: Cargo.toml  build.rs
ssi-ffi-jose/ssi/ffi_jose/native/src/: jose.rs
ssi-ffi-jose/ssi/ffi_jose/native/src/wrappers/: c.rs  java.rs  node.rs
ssi-ffi-jose/ssi/ffi_jose/native/src/wrappers/node/: macros.rs
test/: neon-interface.spec.js  neon-interface.spec.ts
wrappers/c/: main.c
(+54 files in other folders)
