[package]
name = "ffi-jose"
version = "0.1.0"
description = "A Foreign Function Interface (FFI) for the Rust JOSE package"
authors = ["Andrew Lord <andrew.lord@nuggets.life>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "jose"
crate-type = ["staticlib", "cdylib"]

[features]
default = ["node"]
java = ["jni","openssl"]
node = ["neon"]
c = []

[build-dependencies]
neon-build = "0.10.1"
cbindgen ="0.24.3"

[dependencies]
neon = { version = "0.10.1", optional = true }
josekit = "0.8.0"
serde_json = "1.0.78"
base64 = "0.13.0"
openssl = { version = "0.10", optional=true, features = ["vendored"] }
jni = { version = "0.19", optional = true }

